# CamaraCommon

./: .gitignore  LICENSE  MANIFEST.in  README.md  __init__.py  cleanup.sh  mypy.ini  pyproject.toml  setup.py
Basic/: ErrorInfo.py  __init__.py
CamaraCommon/Basic/: TimePeriod.py  XCorrelator.py  __init__.py
CamaraCommon/Communication/: PhoneNumber.py  __init__.py
CamaraCommon/Device/: Device.py  DeviceResponse.py  __init__.py
CamaraCommon/Error/: BadRequest.py  ErrorFactory.py  ErrorInfo.py  Forbidden.py  InternalServerError.py  NotFound.py  ServiceUnavailable.py  TooManyRequests.py  Unauthorized.py  UnprocessableContent.py  __init__.py
CamaraCommon/Geography/: Area.py  AreaType.py  Circle.py  Point.py  PointList.py  Polygon.py  __init__.py
CamaraCommon/Network/: DeviceIpv4Addr.py  DeviceIpv4Address.py  DeviceIpv6Address.py  Port.py  SingleIpv4Addr.py  __init__.py
Communication/: NetworkAccessIdentifier.py  __init__.py
Device/: Device.py
Error/: Forbidden.py  README.md  ServiceUnavailable.py
Geography/: Area.py  Latitude.py  Longitude.py  Polygon.py  __init__.py
Network/: DeviceIpv6Address.py  SingleIpv4Addr.py  __init__.py
area/: Circle.py  Polygon.py  __init__.py
basic/: TimePeriod.py  XCorrelator.py  __init__.py
communication/: __init__.py
device/: Device.py  DeviceResponse.py  __init__.py
geography/: PointList.py  __init__.py
network/: DeviceIpv4Addr.py  __init__.py
tests/: __init__.py  test_basic_types.py  test_communication.py  test_device.py  test_error.py  test_geography_area.py  test_integration.py  test_network.py
